--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta name="p:domain_verify" content="39ef04f016ad47335e176a58a318320d"/>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "v96arzzmu2");
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moonlight Mana</title>
