--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta name="p:domain_verify" content="39ef04f016ad47335e176a58a318320d"/>
 
-    <meta name="theme-color" content="#0F172A" />
+    <meta name="theme-color" content="#40566E" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <link rel="manifest" href="/manifest.json" />
